2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-5 GIT revision 18...

2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
  * eliminate extraneous spaces in AC_PATH_PROG (reference
    https://github.com/ImageMagick/ImageMagick/issues/3428).

2021-03-20  7.0.11-4  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-4 GIT revision 18551:474c73cba:20210320

2021-03-13  7.0.11-4  <quetzlzacatenango@image...>
  * support caption:split define (reference
   https://github.com/ImageMagick/ImageMagick/discussions/3389).
  * avoid an omp deadlock with policy string

2021-03-06  7.0.11-3  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-3 GIT revision 18521:10079791f:20210306

2021-03-02  7.0.11-3  <quetzlzacatenango@image...>
  * Eliminate multiple division by zero exceptions (reference
    https://github.com/ImageMagick/ImageMagick/issues/3339 and others).
  * Use -define filename:literal=true to bypass interpretting embedded
    formatting characters and instead use the filename literally.

2021-02-27  7.0.11-2  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-2 GIT revision 18492:c524ed20c:20210227

2021-02-25  7.0.11-2  Dirk Lemstra <dirk@lem.....org>
  * decode HEIC images in sRGB instead of YCbCr.

2021-02-25  7.0.11-2  <happyerc...@...>
  * Division by zero error is possible if crafty file sets film-gamma property
  * Check for overflow in thumbnail coder
  * Prevent compiler from optimizing out buffer clearing in cipher

2021-02-21  7.0.11-2  <quetzlzacatenango@image...>
  * Clone properties from image stack.
  * Set overall image depth statistic in Composite channel.

2021-02-21  7.0.11-1  <quetzlzacatenango@image...>
  * Clone properties from image stack.

2021-02-21  7.0.11-1  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-1 GIT revision 18456:4de21b7b4:20210221

2021-02-15  7.0.11-1  <quetzlzacatenango@image...>
  * fix EXR crash (reference