@@ -1,6 +1,10 @@
 2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.11-5 GIT revision 18...
 
+2021-03-25  7.0.11-5  Dirk Lemstra <dirk@lem.....org>
+  * disable OpenCL by default, use the environment variable MAGICK_OCL_DEVICE
+    to turn it on or select the device to use.
+
 2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
   * eliminate extraneous spaces in AC_PATH_PROG (reference
     https://github.com/ImageMagick/ImageMagick/issues/3428).
@@ -10,7 +14,7 @@
 
 2021-03-13  7.0.11-4  <quetzlzacatenango@image...>
   * support caption:split define (reference
-   https://github.com/ImageMagick/ImageMagick/discussions/3389).
+    https://github.com/ImageMagick/ImageMagick/discussions/3389).
   * avoid an omp deadlock with policy string
 
 2021-03-06  7.0.11-3  <quetzlzacatenango@image...>
